testing fixing the visibility bug of the page

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body::before {
     background-image: url("img/Ruido.png");
     background-size: 100% 100%;
     position: relative;
+    visibility: hidden;
 }
 
 .container__conteudo {
